
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@drawable/guide_page_bckgrnd">

<LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/guide_page_welcome"
        android:textSize="36sp"
        android:textStyle="bold"
        android:id="@+id/textView2"
        android:layout_gravity="center_horizontal"
        style="@style/button_text"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/guide_page_welcome_content"
        android:textSize="14sp"
        android:layout_margin="10dp"
        android:id="@+id/textView3"
        android:layout_gravity="center_vertical|end" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/guide_page_login_title"
        android:textStyle="bold"
        android:id="@+id/textView4"
        android:layout_gravity="center_horizontal"
        style="@style/button_text"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/guide_page_login_title_content"
        android:textSize="14sp"
        android:layout_margin="10dp"
        android:id="@+id/textView5"
        android:layout_gravity="center_vertical|end" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/guide_page_home_title"
        android:textStyle="bold"
        android:id="@+id/textView6"
        android:layout_gravity="center_horizontal"
        style="@style/button_text" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/guide_page_home_title_content"
        android:textSize="14sp"
        android:layout_margin="10dp"
        android:id="@+id/textView7"
        android:layout_gravity="center_vertical|end" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/guide_page_new_exp_title"
        android:textStyle="bold"
        android:id="@+id/textView8"
        android:layout_gravity="center_horizontal"
        style="@style/button_text" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/guide_page_new_exp_title_info"
        android:textSize="14sp"
        android:layout_margin="10dp"
        android:id="@+id/textView9"
        android:layout_gravity="center_vertical|end" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/guide_page_saved_sessions_title"
        android:textStyle="bold"
        android:id="@+id/textView10"
        android:layout_gravity="center_horizontal"
        style="@style/button_text" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/guide_page_saved_sessions_title_content"
        android:textSize="14sp"
        android:layout_margin="10dp"
        android:id="@+id/textView11"
        android:layout_gravity="center_vertical|end" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/guide_page_sensors_title"
        android:textStyle="bold"
        android:id="@+id/textView12"
        android:layout_gravity="center_horizontal"
        style="@style/button_text" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/guide_page_sensors_title_content"
        android:textSize="14sp"
        android:layout_margin="10dp"
        android:id="@+id/textView13"
        android:layout_gravity="center_vertical|end" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/guide_page_color_sensor_title"
        android:textStyle="italic"
        android:id="@+id/textView14"
        android:layout_gravity="start"
        style="@style/button_text" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/guide_page_color_sensor_title_content"
        android:textSize="14sp"
        android:layout_margin="10dp"
        android:id="@+id/textView15"
        android:layout_gravity="center_vertical|end" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/guide_page_temp_sensor_title"
        android:textStyle="italic"
        android:id="@+id/textView16"
        android:layout_gravity="start"
        style="@style/button_text" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/guide_page_temp_sensor_title_content"
        android:textSize="14sp"
        android:layout_margin="10dp"
        android:id="@+id/textView17"
        android:layout_gravity="center_vertical|end" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/guide_page_ambient_sensor_title"
        android:textStyle="italic"
        android:id="@+id/textView18"
        android:layout_gravity="start"
        style="@style/button_text" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/guide_page_ambient_sensor_title_content"
        android:textSize="14sp"
        android:layout_margin="10dp"
        android:id="@+id/textView19"
        android:layout_gravity="center_vertical|end" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/guide_page_var_sensor_title"
        android:textStyle="italic"
        android:id="@+id/textView20"
        android:layout_gravity="start"
        style="@style/button_text" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/guide_page_var_sensor_title_content"
        android:textSize="14sp"
        android:layout_margin="10dp"
        android:id="@+id/textView21"
        android:layout_gravity="center_vertical|end" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/guide_page_new_data_title"
        android:textStyle="bold"
        android:id="@+id/textView22"
        style="@style/button_text" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/guide_page_new_data_title_content"
        android:textSize="14sp"
        android:layout_margin="10dp"
        android:id="@+id/textView23"
        android:layout_gravity="center_vertical|end" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/guide_page_save_data_title"
        android:textStyle="bold"
        android:id="@+id/textView24"
        style="@style/button_text" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/guide_page_save_data_title_contet"
        android:textSize="14sp"
        android:layout_margin="10dp"
        android:id="@+id/textView25"
        android:layout_gravity="center_vertical|end" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/guide_page_save_csv_title"
        android:textStyle="bold"
        android:id="@+id/textView26"
        style="@style/button_text" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/guide_page_save_csv_title_content"
        android:textSize="14sp"
        android:layout_margin="10dp"
        android:id="@+id/textView27"
        android:layout_gravity="center_vertical|end" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/guide_page_logout_title"
        android:textStyle="bold"
        android:id="@+id/textView28"
        style="@style/button_text" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/guide_page_logout_title_content"
        android:textSize="14sp"
        android:layout_margin="10dp"
        android:id="@+id/textView29"
        android:layout_gravity="center_vertical|end" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/guide_page_additional_help_title"
        android:textStyle="bold"
        android:id="@+id/textView30"
        style="@style/button_text" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/guide_page_additional_help_title_content"
        android:textSize="14sp"
        android:layout_margin="10dp"
        android:id="@+id/textView31"
        android:layout_gravity="center_vertical|end" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/home_title"
        android:id="@+id/home_button"
        android:background="@drawable/main_menu_button"
        android:textColor="#5f5e5e"
        android:layout_gravity="center_horizontal" />
</LinearLayout>
</ScrollView>


