<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"
    android:background="@drawable/home_screen_bckgrnd">

    <TextView android:text="@string/hello_world"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/text_view"
        android:textColor="#D9D3D3"/>

    <Button
        style="@style/button_text"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/login_button"
        android:textSize="20sp"
        android:textColor="#6d6c6c"
        android:id="@+id/next_activity_button"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:longClickable="false"
        android:layout_marginTop="100dp"
        android:background="@drawable/login_button"/>

    <EditText
        android:id="@+id/enter_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="0dp"
        android:layout_above="@+id/enter_password"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:hint="@string/username_hint"
        android:textColorHint="#2D65B3"
        android:textColor="#FFFFFF"
        android:layout_alignParentStart="true" />

    <EditText
        android:id="@+id/enter_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/next_activity_button"
        android:inputType="textPassword"
        android:textColor="#FFFFFF"
        android:hint="@string/password_hint"
        android:layout_marginBottom="50dp"
        android:textColorHint="#2D65B3"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        style="@style/button_text"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/new_user_button"
        android:textSize="20sp"
        android:textColor="#6d6c6c"
        android:id="@+id/make_new_user_button"
        android:focusableInTouchMode="true"
        android:background="@drawable/new_user_button"
        android:layout_marginTop="50dp"
        android:layout_below="@+id/next_activity_button"
        android:layout_centerHorizontal="true" />


</RelativeLayout>
