<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container5"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.akanksha.pocketlab.AmbientSensor"
    android:background="#000000">

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="55dp"
        android:layout_height="wrap_content"
        android:text="@string/sensors_pg_title"
        android:textSize="12sp"
        android:textColor="#5f5e5e"
        android:id="@+id/sensors_button"
        android:background="@drawable/main_menu_button"
        android:layout_gravity="start|top" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_data_title"
        android:textSize="12sp"
        android:textColor="#5f5e5e"
        android:id="@+id/button"
        android:layout_gravity="start|bottom"
        android:background="@drawable/new_data_button"/>

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_data_title"
        android:textSize="12sp"
        android:textColor="#5f5e5e"
        android:id="@+id/button4"
        android:layout_gravity="end|bottom"
        android:background="@drawable/new_data_button"/>
</FrameLayout>